flux/clusters/cumulus/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
